<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mortality_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/mortality"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/mortality_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/score_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/score_label"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:text="10" />

    <TextView
        android:id="@+id/mortality_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/mortality_label"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:text="10%" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_age_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:text="Idade"
        app:layout_constraintBottom_toTopOf="@+id/score_label"
        app:layout_constraintEnd_toStartOf="@+id/textView_age_value" />

    <TextView
        android:id="@+id/textView_age_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="50"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_age_label"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/situation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="Situação"
        app:layout_constraintEnd_toStartOf="@+id/situation_value"
        app:layout_constraintTop_toBottomOf="@+id/mortality_label" />

    <TextView
        android:id="@+id/situation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="preenchimento"
        app:layout_constraintBaseline_toBaselineOf="@+id/situation_label"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="422dp" />
</androidx.constraintlayout.widget.ConstraintLayout>